// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onTextChange={[Function]}
      placeholder=""
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontSize": 16,
          "height": 48,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
        "marginTop": 8,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 2`] = `
<View
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onTextChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontSize": 16,
          "height": 48,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
        "marginTop": 8,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 3`] = `
<View
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onTextChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontSize": 16,
          "height": 48,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <View
        override={
          Object {
            "color": "#c3c6cc",
            "height": 24,
            "width": 24,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
        "marginTop": 8,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 4`] = `
<View
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onTextChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#c3c6cc"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#c3c6cc",
          "flex": 1,
          "fontSize": 16,
          "height": 48,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <View
        override={
          Object {
            "color": "#c3c6cc",
            "height": 24,
            "width": 24,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
        "marginTop": 8,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 5`] = `
<View
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#de350b",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onTextChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#c3c6cc"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#c3c6cc",
          "flex": 1,
          "fontSize": 16,
          "height": 48,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <View
        override={
          Object {
            "color": "#de350b",
            "height": 24,
            "width": 24,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontSize": 13.28,
        "fontWeight": "500",
        "height": 13.28,
        "lineHeight": 13.28,
        "marginTop": 8,
      }
    }
  >
    error
  </Text>
</View>
`;
